--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -7,10 +7,8 @@
   display: flex;
   height: 80vh;
 }
-.home-container-reverse {
-  display: flex;
+.reverse {
   flex-direction: row-reverse;
-  height: 80vh;
 }
 .home-container .content {
   width: 50%;
