--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,11 +1,17 @@
 
 .app-title {
-  margin-bottom: 30px;
   text-align: center;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 50px;
+}
+.content h5 {
+  margin-bottom: 25px;
 }
 .home-container {
   display: flex;
   height: 80vh;
+  max-width: 1200px;
+  margin: auto;
 }
 .reverse {
   flex-direction: row-reverse;
@@ -29,4 +35,15 @@
 }
 .stock-model-img {
   background-image: url('/stock-model.jpg');
+}
+
+@media screen and (max-width: 965px) {
+  .home-background-image,
+  .stock-model-img,
+  .keyboard-img {
+    display: none;
+  }
+  .home-container {
+    justify-content: center;
+  }
 }
